192
This was apparently fixed between 2.7.2 and 2.7.3:
```scala
[paulp@jon 279 (master)]$$ /scala/inst/scala-2.7.2.final/bin/scalac a.scala 
a.scala:3: error: type mismatch;
 found   : x.Sq[A]
 required: RegExp.this.Sq[A]
  def foo(x:RegExp[A]): Sq[A] = x.asInstanceOf[Sq[A]]
                                  ^
one error found
[paulp@jon 279 (master)]$$ /scala/inst/scala-2.7.3.final/bin/scalac a.scala 
[paulp@jon 279 (master)]$$ 
```
... so I am briefly reassinging to buraq, then closing the ticket - please reopen it if you don't agree it's fixed.
